kubernetes/apps/open-webui/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-external-open-webui
  namespace: open-webui
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  hostnames:
    - "openwebui.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: open-webui-service
      port: 8080
